--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: rails_blog_development
-  username: postgres
-  password: 'loman254!'
+  username: techteam1
+  password: ''
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +60,8 @@ development:
 test:
   <<: *default
   database: rails_blog_test
-  username: postgres
-  password: 'loman254!'
+  username: techteam1
+  password: ''
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
